Fixed spelling error: 'from' to 'form'

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,7 +2,7 @@
     "dashboard": "tableau de bord",
     "charts": "hit-parade",
     "tables": "tableaux",
-    "froms": "Froms",
+    "forms": "Froms",
     "boostrapElement": "bootstrap élément",
     "boostrapGrid": "bootstrap grille",
     "component": "composant",
