--- a/src/assets/i18n/ur.json
+++ b/src/assets/i18n/ur.json
@@ -2,7 +2,7 @@
     "dashboard": "ڈیش بورڈ",
     "charts": "چارٹس",
     "tables": "میزیں",
-    "froms": "سے",
+    "forms": "سے",
     "boostrapElement": "عنصر بوٹسٹریپ",
     "boostrapGrid": "گرڈ بوٹسٹریپ",
     "component": "اجزاء",
